--- a/BlazorApp/Components/ReusableComponents/GallerySlider.razor
+++ b/BlazorApp/Components/ReusableComponents/GallerySlider.razor
@@ -1,25 +1,32 @@
-﻿<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100" src="..." alt="First slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="..." alt="Second slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="..." alt="Third slide">
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
+﻿
+<div class="carousel">
+    @for (var i = 0; i < images.Length; i++)
+    {
+        var path = $"/Picture/{images[i]}.png";
+        <div class="carousel-item @(currentIndex == i ? "active" : "")">
+            <img src="@path" alt="Image @i" />
+        </div>
+
+    }
+</div>
+<div class="btns"
+    <button id="prevbtn" class="btn btn-outline-dark" @onclick="PreviousImage">Previous</button>
+    <button id="nxtbtn" class="btn btn-outline-dark" @onclick="NextImage">Next</button>
 </div>
 
-@code {
 
+@code {
+    private int index = 0;
+    private int currentIndex = 0;
+    private string[] images = new string[] { "ac", "skyrim"};
+
+    private void NextImage()
+    {
+        currentIndex = (currentIndex + 1) % images.Length;
+    }
+
+    private void PreviousImage()
+    {
+        currentIndex = (currentIndex - 1 + images.Length) % images.Length;
+    }
 }
