--- a/BlazorApp/Components/Pages/ProductList.razor
+++ b/BlazorApp/Components/Pages/ProductList.razor
@@ -4,6 +4,8 @@
 @inject NavigationManager NavigationManager
 
 
+<PageTitle>Gamers Lounge: Product List</PageTitle>
+
 <div class="ProductListTop">
     <h3 class="ProductListTitle">ProductList</h3>
 </div>
