--- a/BlazorApp/Components/Pages/ProductList.razor
+++ b/BlazorApp/Components/Pages/ProductList.razor
@@ -3,6 +3,10 @@
 @inject IJSRuntime JSRuntime
 @inject NavigationManager NavigationManager
 
+<head>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <!-- Andre head-elementer her, som titel, CSS-link, etc. -->
+</head>
 
 <PageTitle>Gamers Lounge: Product List</PageTitle>
 
