--- a/BlazorApp/Components/App.razor
+++ b/BlazorApp/Components/App.razor
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="app.css" />
 
     <link rel="stylesheet" href="BlazorApp.styles.css" />
-    <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="icon" type="image/png" href="/favicon.png">
     <HeadOutlet @rendermode="@InteractiveServer" />
 </head>
 
