--- a/BlazorApp/Components/Pages/Home.razor
+++ b/BlazorApp/Components/Pages/Home.razor
@@ -3,19 +3,19 @@
 @inject List<Item> allDummyData
 @inject NavigationManager NavigationManager
 
-<PageTitle>Home</PageTitle>
+<PageTitle>Gamers Lounge</PageTitle>
 
 <div class="section">
 	<div class="container text-center">
 		<div class="row">
-			<div class="colum left-colum">
+			<div class="left-colum">
 				<h2 class="header-top-section">Buy and Sell Used Video Games</h2>
 				<p>Discover a wide selection of pre-owned video games and console. Start buying or selling today.</p>
 				<a href="" class="btn btn-dark">Start</a>
 				<a href="" class="btn btn-dark">Learn More</a>
 			</div>
-			<div class="col right-colum">
-				<img src="./Picture/Temp_Picture.jpg" alt="" class="image" />
+			<div class="right-colum">
+				<img src="./Picture/Temp_Picture.jpg" alt="" class="colum-image" />
 			</div>
 		</div>
 	</div>
