--- a/BlazorApp/Components/Layout/NavMenu.razor
+++ b/BlazorApp/Components/Layout/NavMenu.razor
@@ -1,7 +1,10 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="">BlazorApp</a>
-    </div>
+    <a class="home" href="/" style="text-decoration: none; color: white;">
+        <nav class="flex items-center justify-between flex-wrap p-6 my-bar">
+                <img class="Logo" src="/logo.png" style="max-height: 35px; max-width: 40px;">
+            <span class="text-xl tracking-tight" style="font-family:'Bradley Hand ITC'; font-size: 25px;">Gamers Lounge</span>
+        </nav>
+    </a>
 </div>
 
 <input type="checkbox" title="Navigation menu" class="navbar-toggler" />
