--- a/BlazorApp/Components/Pages/ProductList.razor.css
+++ b/BlazorApp/Components/Pages/ProductList.razor.css
@@ -28,7 +28,47 @@
 
 .pageCount p {
     margin: 1rem;
+    font-size: 1.5rem;
 }
+
+.pageButton {
+    background-color: white;
+    border: none;
+    padding: 5px;
+    width: 30px;
+    height: 30px;
+    position: relative;
+    display: inline-block;
+    border-radius: 50%; /* Dette tilføjer cirklen rundt om knappen */
+    text-align: center; /* Sørger for, at teksten er centreret */
+    line-height: 20px; /* Justerer vertikal placering af tekst */
+}
+
+.pageButton:disabled {
+    opacity: 0.5;
+    cursor: not-allowed;
+}
+
+.arrow {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    font-size: 25px; /* Juster størrelsen af pilen */
+}
+
+.leftArrow {
+    transform: translate(-50%, -50%) rotate(0); /* Juster rotationen for at pege til venstre */
+}
+
+.rightArrow {
+    transform: translate(-50%, -50%) rotate(0deg); /* Juster rotationen for at pege til højre */
+}
+
+
+
+
 
 
 /* Media query for mindre skærme */
