--- a/BlazorApp/Components/Pages/Home.razor
+++ b/BlazorApp/Components/Pages/Home.razor
@@ -32,21 +32,21 @@
 
 		<div class="card-middle-section">
 			<div class="card-body">
-				<img src="favicon.png" class="logo" />
+				<img src="logo.png" class="logo" />
 				<h3 class="card-title">Wide Game Selection</h3>
 				<p class="card-text">Browse through a vast collection of games.</p>
 			</div>
 		</div>
 		<div class="card-middle-section">
 			<div class="card-body">
-				<img src="favicon.png" class="logo" />
+				<img src="logo.png" class="logo" />
 				<h3 class="card-title">Secure Payment</h3>
 				<p class="card-text">Shop with peace of mind knowing your transactions are secure.</p>
 			</div>
 		</div>
 		<div class="card-middle-section">
 			<div class="card-body">
-				<img src="favicon.png" class="logo" />
+				<img src="logo.png" class="logo" />
 				<h3 class="card-title">User Ratings</h3>
 				<p class="card-text">Make informed purchasing decisions with ratings and reviews.</p>
 			</div>
