--- a/BlazorApp/Components/Pages/Home.razor.css
+++ b/BlazorApp/Components/Pages/Home.razor.css
@@ -56,6 +56,11 @@
     border-radius: 10px;
 }
 
+.logo {
+   max-width: 50px;
+   max-height: 50px;
+}
+
 .button-container-middle-section {
     display: flex;
     justify-content: center;
@@ -76,8 +81,9 @@
     position: relative;
 }
 
-.card-body-bottom:hover {
-    opacity: 70%;
+.card-bottom-section:hover {
+    transform: scale(1.01);
+    transition: transform 0.3s ease-in-out;
 }
 
 .btn-dark {
