--- a/BlazorApp/Components/Pages/Product.razor
+++ b/BlazorApp/Components/Pages/Product.razor
@@ -46,8 +46,8 @@
 
 
 
-<ContactSellerPopup IsVisible="@isPopupVisible" IsVisibleChanged="UpdatePopupVisibility"></ContactSellerPopup>
-
+@* <ContactSellerPopup IsVisible="@isPopupVisible" IsVisibleChanged="UpdatePopupVisibility"></ContactSellerPopup>
+ *@
 @* <button type="button" @onclick="ShowPopup">Kontakt sælger</button> *@
 
 
