--- a/BlazorApp/Components/ReusableComponents/Listing.razor.css
+++ b/BlazorApp/Components/ReusableComponents/Listing.razor.css
@@ -162,7 +162,6 @@
 }
 
 .card {
-    position: relative;
     background-color: #b3b3b3;
     border: 1px solid #ccc;
     padding: 20px;
@@ -170,6 +169,14 @@
     height: 400px;
     width: 100%;
     overflow: auto;
+    
+}
+.card:hover {
+    transform: scale(1.1);
+    transition: transform 0.3s ease-in-out;
+    overflow: hidden;
+    height: 100%;
+
 }
 
 
