--- a/BlazorApp/Components/Pages/Product.razor
+++ b/BlazorApp/Components/Pages/Product.razor
@@ -63,16 +63,16 @@
         gameToShow = allDummyData[Int32.Parse(itemID)];
     }
 
-    private bool isPopupVisible = false;
+    // private bool isPopupVisible = false;
 
-    private void ShowPopup()
-    {
-        isPopupVisible = true;
-    }
+    // private void ShowPopup()
+    // {
+    //     isPopupVisible = true;
+    // }
 
-    private void UpdatePopupVisibility(bool IsPopupVisible)
-    {
-        isPopupVisible = IsPopupVisible;
-    }
+    // private void UpdatePopupVisibility(bool IsPopupVisible)
+    // {
+    //     isPopupVisible = IsPopupVisible;
+    // }
 
 }
