--- a/BlazorApp/Components/Pages/Product.razor
+++ b/BlazorApp/Components/Pages/Product.razor
@@ -1,6 +1,6 @@
 ﻿@page "/product/{itemID}"
-@inject List<Item> allDummyData
-@inject List<User> allDummyUsers
+@* @inject List<PC_Game> allPCGames *@
+@* @inject List<User> allDummyUsers *@
 <PageTitle>Gamers lounge: @gameToShow.gameName</PageTitle>
 
 
@@ -38,7 +38,7 @@
             2 of 3
         </div>
         <div class="col">
-            <SellerDetails user="userToShow"></SellerDetails>
+            @* <SellerDetails user="userToShow"></SellerDetails> *@
         </div>
     </div>
 </div>
@@ -52,16 +52,28 @@
 
 
 @code {
-    public User userToShow;
-    public Item gameToShow;
+
+    List<PC_Game> allPCGames = new CreateGames().GeneretePCDummyGames();
     [Parameter]
-    public string itemID { get; set; }
+    public string ItemID { get; set; }
+    public PC_Game gameToShow;
 
     protected override void OnInitialized()
     {
-        userToShow = allDummyUsers[Int32.Parse(itemID)];
-        gameToShow = allDummyData[Int32.Parse(itemID)];
+        gameToShow = allPCGames[Int32.Parse(ItemID)];
     }
+
+
+    // public User userToShow;
+    // public PC_Game gameToShow;
+    // [Parameter]
+    // public string itemID { get; set; }
+
+    // protected override void OnInitialized()
+    // {
+    //     // userToShow = allDummyUsers[Int32.Parse(itemID)];
+    //     gameToShow = allPCGames[Int32.Parse(itemID)];
+    // }
 
     // private bool isPopupVisible = false;
 
