--- a/BlazorApp/Components/ReusableComponents/Search.razor
+++ b/BlazorApp/Components/ReusableComponents/Search.razor
@@ -1,4 +1,4 @@
-﻿@inject List<Item> allDummyData
+﻿@* @inject List<Item> allDummyData
 
 @if (showSearch)
 {
@@ -21,3 +21,4 @@
         await OnSearch.InvokeAsync(searchText);
     }
 }
+ *@
