--- a/BlazorApp/Components/ReusableComponents/SellerDetails.razor
+++ b/BlazorApp/Components/ReusableComponents/SellerDetails.razor
@@ -1,4 +1,4 @@
-﻿<div class="sellerDetailsContainer"
+﻿@* <div class="sellerDetailsContainer"
                 <h5 class="sellerDetails"><b>Seller Details:</b></h5>
                 <p class="name"><b>Name: </b>@user.name</p>
                 <p class="location"><b>Loaction: </b>@user.Location</p>
@@ -15,3 +15,4 @@
     public bool IsPopupVisible { get; set; }
 
 }
+ *@
