--- a/BlazorApp/Components/ReusableComponents/Search.razor
+++ b/BlazorApp/Components/ReusableComponents/Search.razor
@@ -1,4 +1,4 @@
-﻿@* @inject List<Item> allDummyData
+﻿@inject List<Item> allDummyData
 
 @if (showSearch)
 {
@@ -21,4 +21,3 @@
         await OnSearch.InvokeAsync(searchText);
     }
 }
- *@
