--- a/BlazorApp/Components/ReusableComponents/SellerDetails.razor
+++ b/BlazorApp/Components/ReusableComponents/SellerDetails.razor
@@ -1,10 +1,27 @@
-﻿@* <div class="sellerDetailsContainer"
+﻿<div class="sellerDetailsContainer"
                 <h5 class="sellerDetails"><b>Seller Details:</b></h5>
                 <p class="name"><b>Name: </b>@user.name</p>
                 <p class="location"><b>Loaction: </b>@user.Location</p>
                 <p class="itemsold"><b>Items sold: </b>@user.itemsSold</p>
                 <p class="itemviewed"><b>Item viewed: </b>@user.ItemsViewed</p>
 </div>
+
+@{
+    var showClass = IsPopupVisible ? "show" : "hide";
+}
+
+<div class="popup @showClass">
+    <div class="popup-content">
+        <h2>Kontakt sælger</h2>
+        <p>Her kan du indtaste din forespørgsel til sælgeren.</p>
+        <button @onclick="Close">Luk</button>
+    </div>
+</div>
+
+<div class="popup-overlay @showClass"></div>
+
+
+
 
 @code {
     [Parameter]
@@ -14,5 +31,12 @@
     [Parameter]
     public bool IsPopupVisible { get; set; }
 
+    [Parameter]
+    public EventCallback<bool> IsVisibleChanged { get; set; }
+
+    private void Close()
+    {
+        IsPopupVisible = false;
+        IsVisibleChanged.InvokeAsync(IsPopupVisible);
+    }
 }
- *@
