--- a/BlazorApp/Components/ReusableComponents/Listing.razor
+++ b/BlazorApp/Components/ReusableComponents/Listing.razor
@@ -1,4 +1,4 @@
-﻿@* @inject IJSRuntime JSRuntime
+﻿@inject IJSRuntime JSRuntime
 @inject NavigationManager NavigationManager
 
 @if (ShowAsCards)
@@ -73,4 +73,3 @@ else
         NavigationManager.NavigateTo($"./product/{itemId}");
     }
 }
- *@
