--- a/BlazorApp/Components/Pages/ProductList.razor
+++ b/BlazorApp/Components/Pages/ProductList.razor
@@ -1,5 +1,5 @@
 ﻿@page "/productlist"
-@inject List<All_Games> allDummyData
+@inject List<Item> allDummyData
 @inject IJSRuntime JSRuntime
 @inject NavigationManager NavigationManager
 
@@ -17,14 +17,14 @@
 
 <h5 class="productsCount">Total products: @allDummyData.Count</h5>
 
-@* <button class="viewToggleBtn" @onclick="ToggleView">
+ <button class="viewToggleBtn" @onclick="ToggleView">
     Skift visning
 </button>
 
 
 <div class="container">
     <Listing Games="gamesToShow" OnAddToFavorites="AddToFavorites" ShowAsCards="@showAsCards"></Listing>
-</div> *@
+</div> 
 
 <div class="pageCount">
     <button class="pageButton" @onclick="() => UpdatePage(currentPage -1)" disabled="@(currentPage == 1)">
@@ -37,8 +37,8 @@
 </div>
 
 @code {
-    public List<All_Games> gamesToShow;
-    public List<All_Games> favoriteGames = new List<All_Games>(); // Liste til at gemme favoritter
+    public List<Item> gamesToShow;
+    public List<Item> favoriteGames = new List<Item>(); // Liste til at gemme favoritter
     private int currentPage = 1;
     private const int itemsPerPage = 5;
     private int totalPages;
@@ -134,7 +134,7 @@
         return parameters;
     }
 
-    private async Task AddToFavorites(All_Games game)
+    private async Task AddToFavorites(Item game)
     {
         if (!favoriteGames.Contains(game))
         {
